wikijs/wiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: requarks/wiki:2.4
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 2Gi
        ports:
        - containerPort: 3000
          protocol: TCP
      volumes:
        - name: wikijs
          hostPath: 
            path: /mnt/wikijs
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: wikijs
spec:
  type: LoadBalancer
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 33000
    targetPort: 3000
