wikijs/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /wikijs
            pathType: Prefix
            backend:
                service:
                    name: wikijs
                    port:
                        number: 31552
          # - path: /rocketchat
          #   backend:
          #       serviceName: rocketchat
          #       servicePort: 33001
